# jsoncodegen

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  prompt.txt  release.sh
.github/workflows/: build-codegen-wasm.yml  ci.yml  release-cli.yml  release-codegen-wasm.yml
cli/: Cargo.toml  README.md  release.sh
cli/src/: main.rs
codegen/: Cargo.toml
codegen-java/: Cargo.toml
codegen-java/src/: lib.rs  main.rs
codegen-java/tests/: script.sh  test.rs
codegen-java/tests/harness/: pom.xml
codegen-java/tests/template/src/: Main.java
codegen-rust/: Cargo.toml
codegen-rust/src/: lib.rs  main.rs
codegen-rust/tests/: script.sh  test.rs
codegen-rust/tests/template/: Cargo.toml
codegen-rust/tests/template/src/: main.rs
codegen/src/: lib.rs
core/: Cargo.toml  README.md
core/src/: case.rs  extra.rs  flat_schema.rs  iota.rs  lib.rs  name_registry.rs  name_resolver.rs  schema.rs  type_graph.rs
core/src/codegen/: case.rs  code.rs  java.rs  mod.rs  rust.rs
core/src/flat_schema/: mod.rs  type_table.rs
core/src/lang/: java.rs  mod.rs  rust.rs
dispatch/: Cargo.toml
dispatch/src/: lib.rs
extra/: Cargo.toml
extra/src/: lib.rs
fuzz-generator/: Cargo.toml
fuzz-generator/src/: main.rs
iota/: Cargo.toml
iota/src/: lib.rs
java/: Cargo.toml
jsoncodegen/: Cargo.toml
jsoncodegen-cli/: Cargo.toml
jsoncodegen-web/: Cargo.toml  jsoncodegen.css  jsoncodegen.html
jsoncodegen-web/src/: lib.rs
jsoncodegen/src/: lib.rs
jsoncodegen/src/codegen/: java.rs
polyfill/: jsoncodegen-wasm32-wasip1.js  jsoncodegen-wasm32-wasip1.test.ts  jsoncodegen-wasm32-wasip1.ts  package.json
rust/src/: lib.rs
sink/: Cargo.toml
sink/src/: lib.rs
src/: main.rs  schema.rs  schema_extraction.rs
src/codegen/: java.rs  mod.rs  rust.rs
telemetry/: Cargo.toml
telemetry/src/: main.rs
test-data/: Cargo.toml  analytics-events.json  ansible-playbook.yaml  array-objects-optional-field-1.json  azure-arm-template.json  azure-pipelines.yml  basic-notebook.ipynb  case-collision-mixed.json  circleci-config.yml  config-file.json  database-migration.json  deno-config.json  discord-webhook.json  docker-daemon.json  empty-key-collision.json  eslintrc-react.json  ethereum-transaction.json  fhir-patient-resource.json  field-case-collision.json  field-fallback-collision.json  fuzz_rust_java_14889065357528187628.json  fuzz_rust_java_6196218231494923568.json  geojson-feature-collection.json  gh-actions-main.yml  gh-actions-release.yml  gh-actions-stale.yml  github-pr-webhook.json  gitlab-ci.yml  java-keyword-field-case.json  jest-config.json  jwt-claims.json  k8s-cronjob.yaml  k8s-deployment.yaml  k8s-secret.yaml  kubernetes-pod-spec.json  lsp-protocol-sample.json  main.tf.json  nested-array-int.json  network-yang-config.json  numeric-key-collision.json  (+32 more)
test-data/anthropic/: claude-messages-api.json
test-data/asyncapi/: asyncapi-spec.json  asyncapi.yaml
test-data/aws/: aws-cloudformation.json  aws-cloudwatch-event.json  aws-s3-event.json
test-data/babel/: babel-config.json
test-data/core-types/: array-float.json  array-int.json  array-objects-optional-field-2.json  array-objects-optional-field-3.json  array-str.json  edge-cases-comprehensive.json  empty-array-then-values.json  linked-list.json  mixed-nesting.json  nested-array-union.json  object-array-int.json  object-array-union.json  object-null.json  object-with-empty-array.json  optional-int-multiple-nulls.json  optional-int-value-first.json  optional-str.json  recursive-file-tree.json  union-object-array.json  union-str-int.json  union-str-object.json
test-data/docker/: docker-compose.yml
test-data/elastic/: elasticsearch-search-response.json  filebeat.yml
test-data/eslint/: eslintrc.yaml
test-data/gcp/: gcp-deployment-manager.yaml
test-data/generic/: case-clash.json  ecommerce-api-response.json
test-data/github/: gh-actions-codeql.yml  github-api-repo.json  github-webhook-push.json
test-data/golangci/: golangci-lint.yml
test-data/grafana/: grafana-dashboard.json
test-data/graphql/: graphql-response.json
test-data/json-schema/: json-schema-meta.json
test-data/jupyter/: data-analysis.ipynb
test-data/kibana/: kibana-dashboard.json
test-data/kubernetes/: k8s-service.yaml
test-data/nodemon/: nodemon.json
test-data/opentelemetry/: opentelemetry-traces.json
test-data/poetry/: pyproject.toml
test-data/prometheus/: prometheus-metrics.json  prometheus.yml
test-data/pub/: pubspec.yaml
test-data/rubocop/: rubocop.yml
test-data/sarif/: sarif-security-report.json
test-data/stripe/: stripe-invoice.json  stripe-payment-intent.json  stripe-subscription.json
test-data/sublime/: sublime-project.json
test-data/typescript/: tsconfig.json
test-data/vcpkg/: vcpkg.json
test-data/vega/: vega-scatter-plot.json
test-data/vscode/: vscode-settings.json
test-data/web-standards/: atom.xml
test-data/youtube/: youtube-video.json
test-harness/java/: .gitignore  pom.xml  run.sh
test-harness/java/src/: Main.java
test-macro/: Cargo.toml
test-macro/src/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
wasm-serve/: Cargo.toml
wasm-serve/src/: main.rs
web/: Cargo.toml  jsoncodegen.css  jsoncodegen.js
web/src/: lib.rs
wit/: jsoncodegen.wit
