[workspace]
resolver = "3"
members = [
    "cli",
    "codegen-java",
    "codegen-rust",
    "core",
    "dispatch",
    "iota",
    "test-utils",
    "web",
]

[workspace.package]
version = "0.7.1"
edition = "2024"

[profile.wasm]
inherits = "release"
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization (LTO)
codegen-units = 1   # Forces the compiler to use a single code generation unit to improve optimizations
panic = "abort"     # Remove panic support, reducing code size

[profile.cli]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

# cargo build -p jsoncodegen-cli --profile cli
# cargo build -p jsoncodegen-java --profile wasm --target wasm32-wasip1

# cargo build -p jsoncodegen-web --profile wasm--target wasm32-unknown-unknown

# cargo install wasm-bindgen-cli
# wasm-bindgen ./target/wasm32-unknown-unknown/web/jsoncodegen_web.wasm --out-dir ./pkg --target web
