[package]
name = "jcg"
version.workspace = true
edition.workspace = true
authors = ["zahash <zahash.z@gmail.com>"]
description = "json code generation cli"
license = "MIT"
repository = "https://github.com/zahash/jsoncodegen/"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
wasmtime = { version = "39", default-features = false, features = ["cranelift"] }
wasmtime-wasi = { version = "39", default-features = false, features = ["p1"] }
