[package]
name = "jsoncodegen-cli"
description = "json code generation cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "jcg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
wasmtime = { version = "40", default-features = false, features = [
    "cranelift",
] }
wasmtime-wasi = { version = "40", default-features = false, features = ["p1"] }

jsoncodegen-utils = { path = "../utils" }
