[package]
name = "jsoncodegen-java"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
convert_case = "0.10"
serde_json = "1"
unicode-general-category = "1"

jsoncodegen = { path = "../core" }

[dev-dependencies]
futures = "0.3"
pretty_assertions = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }

jsoncodegen-test-utils = { path = "../test-utils" }
