[package]
name = "jsoncodegen-java"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
jsoncodegen = { path = "../core", version = "0.7.4" }
serde_json = "1"
convert_case = "0.6.0"
unicode-general-category = "1.0.0"

[dev-dependencies]
jsoncodegen-test-utils = { path = "../test-utils" }
jsoncodegen-test-macro = { path = "../test-macro" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
