[package]
name = "jsoncodegen-rust"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
convert_case = "0.10"
serde_json = "1"
syn = { version = "2", features = ["parsing"] }

jsoncodegen = { path = "../core" }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }

jsoncodegen-test-macro = { path = "../test-macro" }
jsoncodegen-test-utils = { path = "../test-utils" }
