[package]
name = "jsoncodegen"
version = "0.3.1"
edition = "2024"
authors = ["zahash <zahash.z@gmail.com>"]
description = "json code generation library"
license = "MIT"
repository = "https://github.com/zahash/jsoncodegen/"

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }

jsoncodegen-iota = { path = "../iota" }

[dev-dependencies]
pretty_assertions = { version = "1" }
