[package]
name = "jsoncodegen"
version.workspace = true
edition.workspace = true
authors = ["zahash <zahash.z@gmail.com>"]
description = "json code generation library"
license = "MIT"
repository = "https://github.com/zahash/jsoncodegen/"

[dependencies]
serde_json = "1"

jsoncodegen-iota = { path = "../iota" }

[dev-dependencies]
pretty_assertions = { version = "1" }
