[package]
name = "jsoncodegen"
description = "json code generation library"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde_json = "1"

jsoncodegen-iota = { path = "../iota" }

[dev-dependencies]
pretty_assertions = { version = "1" }
