[package]
name = "fuzz-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
# arbitrary = { version = "1", features = ["derive"] } # Maybe useful later

# Local dependencies
jsoncodegen-rust = { path = "../codegen-rust" }
jsoncodegen-java = { path = "../codegen-java" }
jsoncodegen-test-utils = { path = "../test-utils" }
