[package]
name = "jcg"
version = "0.1.1"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "json code generation cli"
license = "MIT"
repository = "https://github.com/zahash/jsoncodegen/jsoncodegen-cli"

[dependencies]
jsoncodegen = { path = "../jsoncodegen", version = "0.2" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
