[package]
name = "jsoncodegen-web"
version = "0.1.0"
edition = "2021"
authors = ["zahash <zahash.z@gmail.com>"]
description = "json code generation cli"
license = "MIT"
repository = "https://github.com/zahash/jsoncodegen/jsoncodegen-web"

[lib]
crate-type = ["cdylib"]

[dependencies]
jsoncodegen = { version = "0.2.1" }
serde_json = "1"
wasm-bindgen = "0.2"

# wasm-pack --verbose build --target web --release
