[package]
name = "jsoncodegen"
version = "0.2.1"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "json code generation"
license = "MIT"
repository = "https://github.com/zahash/jsoncodegen/jsoncodegen"

[dependencies]
serde_json = "1"

[dev-dependencies]
pretty_assertions = { version = "1" }
