[package]
name = "hyper-server"
version = "0.1.0"
edition = "2021"
authors = ["Rustacean <rust@example.com>"]
description = "A high performance HTTP server"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
config = "0.13"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
mockall = "0.11"
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.8"

[features]
default = ["tls"]
tls = ["hyper/server", "hyper/client"]
experimental = []

[[bin]]
name = "server"
path = "src/main.rs"

[[example]]
name = "simple_client"
path = "examples/client.rs"
