[package]
name = "jsoncodegen-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["process", "fs", "io-util", "rt-multi-thread", "macros"] }
convert_case = "0.6.0"

[lib]
name = "jsoncodegen_test_utils"
path = "src/lib.rs"
