[package]
name = "jsoncodegen-web"
version = "0.2.1"
edition = "2021"
authors = ["zahash <zahash.z@gmail.com>"]
description = "json code generation cli"
license = "MIT"
repository = "https://github.com/zahash/jsoncodegen/"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
jsoncodegen = { path = "../core", version = "0.3.0" }
serde_json = "1"
wasm-bindgen = "0.2"
