[package]
name = "jsoncodegen-web"
version = "0.3.1"
edition = "2021"
authors = ["zahash <zahash.z@gmail.com>"]
description = "json code generation web"
license = "MIT"
repository = "https://github.com/zahash/jsoncodegen/"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
wasm-bindgen = "0.2"

jsoncodegen-java = { path = "../codegen-java" }
jsoncodegen-rust = { path = "../codegen-rust" }
